--- a/index.html
+++ b/index.html
@@ -156,6 +156,9 @@
         padding: 0.5rem;
         width: 100%;
       }
+      .flatpickr-weekdays .flatpickr-weekdaycontainer {
+        gap: 0.3rem;
+      }
       .flatpickr-days {
         width: 100%;
       }
