--- a/index.html
+++ b/index.html
@@ -665,6 +665,11 @@
       .modal-meta {
         border: 1px solid var(--border-weak);
       }
+
+      .no-slot {
+        opacity: 0.6;
+        font-size: 13px;
+      }
     </style>
   </head>
 
