--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
         border-bottom: 1px solid rgba(0, 0, 0, 0.06);
       }
       .header-inner {
-        max-width: 720px;
+        /* max-width: 720px; */
         margin: 0 auto;
         padding: 14px 16px;
         display: flex;
         flex-direction: column;
-        gap: 6px;
+        gap: 10px;
       }
       .header-inner .logo {
         font-weight: bold;
@@ -247,7 +247,7 @@
         font-weight: 800 !important;
       }
       .flatpickr-day.today {
-        border-color: rgba(0, 0, 0, 0.3) !important;
+        border-color: rgba(0, 0, 0, 0.1) !important;
       }
 
       #slotCount {
