--- a/index.html
+++ b/index.html
@@ -236,6 +236,7 @@
         max-width: 36px;
         line-height: 36px;
         width: 100%;
+        border-radius: 25px !important;
       }
       .flatpickr-day.selected,
       .flatpickr-day.startRange,
