--- a/index.html
+++ b/index.html
@@ -829,15 +829,15 @@
       <nav class="tabbar" aria-label="tabbar">
         <div class="tabbar-inner">
           <button id="tabReserve" class="tab is-active" type="button">
-            <div class="ico">🗓</div>
+            <div class="ico"><i class="ph ph-caret-left"></i></div>
             <div>予約</div>
           </button>
           <button id="tabList" class="tab" type="button">
-            <div class="ico">📋</div>
+            <div class="ico"><i class="ph ph-caret-left"></i></div>
             <div>予約一覧</div>
           </button>
           <button id="tabSettings" class="tab" type="button">
-            <div class="ico">ℹ️</div>
+            <div class="ico"><i class="ph ph-info"></i></div>
             <div>ご案内</div>
           </button>
         </div>
