--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/flatpickr@4.6.13/dist/flatpickr.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr@4.6.13/dist/l10n/ja.js"></script>
-
+    <script src="https://unpkg.com/@phosphor-icons/web"></script>
     <style>
       /* （ここはカズのCSSそのままでOK） */
       :root {
