--- a/index.html
+++ b/index.html
@@ -829,11 +829,11 @@
       <nav class="tabbar" aria-label="tabbar">
         <div class="tabbar-inner">
           <button id="tabReserve" class="tab is-active" type="button">
-            <div class="ico"><i class="ph ph-caret-left"></i></div>
+            <div class="ico"><i class="ph ph-calendar-blank"></i></div>
             <div>予約</div>
           </button>
           <button id="tabList" class="tab" type="button">
-            <div class="ico"><i class="ph ph-caret-left"></i></div>
+            <div class="ico"><i class="ph ph-list-bullets"></i></div>
             <div>予約一覧</div>
           </button>
           <button id="tabSettings" class="tab" type="button">
