--- a/index.html
+++ b/index.html
@@ -129,10 +129,17 @@
       .back {
         border: 0;
         background: var(--card);
-        padding: 10px 12px;
-        border-radius: 999px;
+        padding: 8px 16px;
+        border-radius: 25px;
         font-weight: 700;
         color: rgba(11, 91, 211, 1);
+        display: flex;
+        align-items: center;
+      }
+
+      .back i {
+        margin-left: -0.5rem;
+        margin-right: 0.3rem;
       }
       .back:active {
         transform: translateY(1px);
