--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
       .slot-btn {
         width: 100%;
         border: 0;
-        padding: 10px 14px;
+        padding: 14px;
         /* border-radius: var(--radius); */
         background: var(--bg);
         /* margin: 10px 0; */
