--- a/index.html
+++ b/index.html
@@ -102,12 +102,21 @@
 
       .content {
         flex: 1 1 auto;
-        overflow: auto;
+        overflow-y: auto;
         /* max-width: 720px; */
         padding: 1rem;
         -webkit-overflow-scrolling: touch;
         /* padding-bottom: calc(var(--tabbar-h) + var(--safe-b) + 22px); */
         background-color: #efefef;
+      }
+
+      .ptr {
+        position: sticky;
+        top: 0;
+        text-align: center;
+        font-size: 12px;
+        padding: 10px 0;
+        opacity: 0.7;
       }
 
       .title {
@@ -749,6 +758,7 @@
       <div id="status">loading...</div>
 
       <main class="content">
+        <div id="ptr" class="ptr hidden">更新中…</div>
         <input id="date" />
 
         <section id="viewCalendar" class="view">
@@ -954,6 +964,6 @@
       </div>
     </div>
 
-    <script src="./app.js?v=20260105-24"></script>
+    <script src="./app.js?v=20260105-25"></script>
   </body>
 </html>
