--- a/index.html
+++ b/index.html
@@ -111,12 +111,10 @@
       }
 
       .ptr {
-        position: sticky;
-        top: 0;
-        text-align: center;
-        font-size: 12px;
+        margin: -1rem -1rem 0; /* contentのpaddingを相殺 */
         padding: 10px 0;
-        opacity: 0.7;
+        background: rgba(255, 255, 255, 0.7);
+        backdrop-filter: blur(6px);
       }
 
       .title {
@@ -964,6 +962,6 @@
       </div>
     </div>
 
-    <script src="./app.js?v=20260105-25"></script>
+    <script src="./app.js?v=20260105-26"></script>
   </body>
 </html>
