--- a/index.html
+++ b/index.html
@@ -111,10 +111,12 @@
       }
 
       .ptr {
-        margin: -1rem -1rem 0; /* contentのpaddingを相殺 */
+        position: sticky;
+        top: 0;
+        text-align: center;
+        font-size: 12px;
         padding: 10px 0;
-        background: rgba(255, 255, 255, 0.7);
-        backdrop-filter: blur(6px);
+        opacity: 0.7;
       }
 
       .title {
@@ -962,6 +964,6 @@
       </div>
     </div>
 
-    <script src="./app.js?v=20260105-26"></script>
+    <script src="./app.js?v=20260105-25"></script>
   </body>
 </html>
