--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
         -webkit-overflow-scrolling: touch;
         /* padding-bottom: calc(var(--tabbar-h) + var(--safe-b) + 22px); */
         background-color: #efefef;
+        overscroll-behavior: contain;
       }
 
       .ptr {
@@ -964,6 +965,6 @@
       </div>
     </div>
 
-    <script src="./app.js?v=20260105-28"></script>
+    <script src="./app.js?v=20260105-29"></script>
   </body>
 </html>
