--- a/index.html
+++ b/index.html
@@ -111,6 +111,10 @@
         overscroll-behavior: contain;
       }
 
+      #ptr {
+        pointer-events: none; /* ✅ 触っても下のボタンを押せる */
+      }
+
       .ptr {
         position: sticky;
         top: 0;
@@ -965,6 +969,6 @@
       </div>
     </div>
 
-    <script src="./app.js?v=20260105-29"></script>
+    <script src="./app.js?v=20260105-30"></script>
   </body>
 </html>
