--- a/index.html
+++ b/index.html
@@ -738,6 +738,15 @@
         font-size: 13px;
         margin-left: 0.5rem;
       }
+
+      .view-calendar {
+        overflow-y: auto;
+      }
+      .view-calendar::after {
+        content: "";
+        display: block;
+        height: 1px;
+      }
     </style>
   </head>
 
