--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
         /* padding-bottom: calc(var(--tabbar-h) + var(--safe-b) + 22px); */
         background-color: #efefef;
         overscroll-behavior: contain;
+        height: calc(100vh - var(--header) - var(--tabbar));
       }
 
       #ptr {
