--- a/index.html
+++ b/index.html
@@ -612,6 +612,20 @@
         margin: initial;
       }
 
+      #loadingOverlay {
+        position: fixed;
+        inset: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        z-index: 9999;
+      }
+
+      /* 今の setLoading が使ってる hidden と合わせる */
+      #loadingOverlay.hidden {
+        display: none;
+      }
+
       .loading-overlay {
         position: fixed;
         inset: 0;
@@ -743,7 +757,7 @@
   </head>
 
   <body>
-    <div id="loadingOverlay" class="loading-overlay hidden" aria-hidden="true">
+    <div id="loadingOverlay" class="loading-overlay" aria-hidden="false">
       <div class="loading-box">
         <div class="spinner"></div>
         <div id="loadingText" class="loading-text">読み込み中...</div>
