--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
       }
 
       .flatpickr-rContainer {
-        padding: 0.5rem;
+        padding: 1rem;
         width: 100%;
       }
       .flatpickr-weekdays .flatpickr-weekdaycontainer {
@@ -270,6 +270,53 @@
       }
       .flatpickr-day.today {
         border-color: rgba(0, 0, 0, 0.1) !important;
+      }
+
+      section [class$="-note"] {
+        margin-top: 2em;
+      }
+
+      section [class$="-note"] h2 {
+        font-size: 18px;
+      }
+
+      section [class$="-note"] ul {
+        padding: 0 1em 0 2em;
+        font-size: 14px;
+      }
+
+      section [class$="-note"] h3 {
+        font-size: 16px;
+        margin-top: 1.5em;
+      }
+
+      section [class$="-note"] dl {
+        padding: 0 1em;
+        font-size: 14px;
+      }
+
+      section [class$="-note"] dl div {
+        margin-bottom: 1em;
+      }
+
+      section [class$="-note"] dl dt {
+        font-weight: 500;
+        margin-bottom: 0.5em;
+      }
+
+      section [class$="-note"] dl dd {
+        margin-left: 2.5em;
+        text-indent: -1.15em;
+      }
+
+      section [class$="-note"] dl dd span {
+        display: block;
+        text-indent: initial;
+        color: var(--muted);
+      }
+
+      section [class$="-note"] [class$="__hint"] {
+        font-size: 14px;
       }
 
       #slotCount {
