--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
       .brand .cap {
         font-size: 10px;
         line-height: 1.3;
+        font-weight: 500;
       }
 
       #status {
@@ -816,7 +817,7 @@
         <div class="header-inner">
           <div class="brand">
             <div class="sub">KID ACADEMY＋ 高岡駅南校</div>
-            <div class="cap">専用予約ツール</div>
+            <div class="cap">ご利用者さま専用 予約アプリ</div>
           </div>
           <div class="logo" id="headerGreeting">こんにちは</div>
         </div>
