--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
         flex: 1 1 auto;
         overflow-y: auto;
         /* max-width: 720px; */
-        padding: 1rem;
+        padding: 1em;
+        padding-bottom: 3em;
         -webkit-overflow-scrolling: touch;
         /* padding-bottom: calc(var(--tabbar-h) + var(--safe-b) + 22px); */
         background-color: #efefef;
