--- a/index.html
+++ b/index.html
@@ -1005,42 +1005,46 @@
         </section>
 
         <section id="viewSettings" class="hidden">
+          <div class="title">ご案内</div>
           <div class="card">
-            <div style="font-weight: 700; font-size: 16px">ご案内</div>
-            <div style="margin-top: 10px; line-height: 1.7">
-              <div style="font-weight: 700; margin-top: 10px">お問い合わせ</div>
-              <div>お急ぎの方：0766-30-3244</div>
-              <div>受付時間：平日 10:00〜18:00</div>
-              <div>
+            <div class="item">
+              <h3 class="setting__title">お問い合わせ</h3>
+              <p>
+                お急ぎの方：<a href="tel:0766-30-3244">0766-30-3244</a>
+                受付時間：平日 10:00〜18:00
+              </p>
+              <address>
                 〒933-0871<br />
                 富山県高岡市駅南2-3-5 西側１階
-              </div>
+              </address>
+            </div>
 
-              <hr style="opacity: 0.2; margin: 12px 0" />
+            <div class="item">
+              <h3 class="setting__title">キャンセルについて</h3>
+              <p>キャンセルは「予約一覧」から行えます。</p>
+            </div>
 
-              <div style="font-weight: 700">キャンセルについて</div>
-              <div>キャンセルは「予約一覧」から行えます。</div>
-
-              <hr style="opacity: 0.2; margin: 12px 0" />
-
-              <div style="font-weight: 700">個人情報の取り扱い</div>
-              <div>
+            <div class="item">
+              <h3 class="setting__title">個人情報の取り扱い</h3>
+              <p>
                 入力いただいた情報は、予約管理とご連絡の目的にのみ利用します。
-              </div>
+              </p>
+            </div>
 
-              <div style="font-weight: 700; margin-top: 10px">免責事項</div>
-              <div>
+            <div class="item">
+              <h3 class="setting__title">免責事項</h3>
+              <p>
                 通信環境や端末の状態により、表示・予約が正常に行えない場合があります。<br />
                 その際は時間をおいて再度お試しください。
-              </div>
+              </p>
+            </div>
 
-              <hr style="opacity: 0.2; margin: 12px 0" />
-
-              <div style="font-size: 12px; color: #666; line-height: 1.6">
+            <div class="item">
+              <p>
                 本アプリは「KID ACADEMY＋ 高岡駅南校」の<br />
                 ご利用者さま向け予約管理ツールです。<br />
                 運営：スケッチ株式会社
-              </div>
+              </p>
             </div>
           </div>
         </section>
